k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-pro
  labels:
    app.kubernetes.io/part-of: microservices-pro-platform
