k8s/04-eureka-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservices-pro
  labels:
    app: eureka-server
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      serviceAccountName: eureka-server-sa
      containers:
        - name: eureka-server
          image: microservices-pro/eureka-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
              name: http
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: microservices-pro
  labels:
    app: eureka-server
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  ports:
    - port: 8761
      targetPort: 8761
      name: http
  selector:
    app: eureka-server
