k8s/05-config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: microservices-pro
  labels:
    app: config-server
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: microservices-pro/config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
              name: http
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: microservices-pro
  labels:
    app: config-server
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  ports:
    - port: 8888
      targetPort: 8888
      name: http
  selector:
    app: config-server
