k8s/07-product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: microservices-pro
  labels:
    app: product-service
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: microservices-pro/product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 35
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: microservices-pro
  labels:
    app: product-service
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  ports:
    - port: 8081
      targetPort: 8081
      name: http
  selector:
    app: product-service
