k8s/09-payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: microservices-pro
  labels:
    app: payment-service
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      serviceAccountName: payment-service-sa
      containers:
        - name: payment-service
          image: microservices-pro/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 35
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: microservices-pro
  labels:
    app: payment-service
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  ports:
    - port: 8083
      targetPort: 8083
      name: http
  selector:
    app: payment-service
