k8s/12-notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microservices-pro
  labels:
    app: notification-service
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      serviceAccountName: notification-service-sa
      containers:
        - name: notification-service
          image: microservices-pro/notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: microservices-pro
  labels:
    app: notification-service
    app.kubernetes.io/part-of: microservices-pro-platform
spec:
  ports:
    - port: 8085
      targetPort: 8085
      name: http
  selector:
    app: notification-service
